# pupil_segmentation

./: .gitignore  CMakeLists.txt  README.md  data_handler.cpp  data_handler.h  segment.cpp  segment.h  track.cpp  visualize.py
data/: eye_tracking_pupil_coordinates.csv
