cmake_minimum_required(VERSION 3.10)
project(pupil_tracker)
find_package(OpenCV REQUIRED)
# find_package(OpenMP REQUIRED)
add_executable(pupil_tracker track.cpp segment.cpp data_handler.cpp)
target_link_libraries(pupil_tracker ${OpenCV_LIBS})
# if(OpenMP_CXX_FOUND)
#     target_link_libraries(MyProject PUBLIC OpenMP::OpenMP_CXX)
# endif()